--- a/cordova-plugin-firebase.opam
+++ b/cordova-plugin-firebase.opam
@@ -1,9 +1,9 @@
 opam-version: "2.0"
 maintainer:   "Thibaut Gudin <tgudin@besport.com>"
 authors:      "Thibaut Gudin <tgudin@besport.com>"
-homepage:     "https://github.com/Thibaut-Gudin/ocaml-cordova-plugin-firebase"
-bug-reports:  "https://github.com/Thibaut-Gudin/ocaml-cordova-plugin-firebase/issues"
-dev-repo:     "https://github.com/Thibaut-Gudin/ocaml-cordova-plugin-firebase"
+homepage:     "https://github.com/besport/ocaml-cordova-plugin-firebase"
+bug-reports:  "https://github.com/besport/ocaml-cordova-plugin-firebase/issues"
+dev-repo:     "https://github.com/besport/ocaml-cordova-plugin-firebase"
 license:      "LGPL-2.1 with OCaml linking exception"
 description: "Binding to the firebase cordova plugin using gen_js_api"
 synopsis: "Binding to the firebase cordova plugin using gen_js_api"
@@ -11,4 +11,6 @@ build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
 depends: [
   "ocaml" { >= "4.08.0" }
   "gen_js_api"
+  "js_of_ocaml" {>= "3.8.0" & < "3.9.0"}
+  "js_of_ocaml-ppx" {>= "3.8.0" & < "3.9.0"}
   ]
