--- a/cordova-plugin-firebase.opam
+++ b/cordova-plugin-firebase.opam
@@ -2,9 +2,9 @@ opam-version: "2.0"
 version: "1.0"
 maintainer:   "Thibaut Gudin <tgudin@besport.com>"
 authors:      "Thibaut Gudin <tgudin@besport.com>"
-homepage:     "https://github.com/besport/ocaml-cordova-plugin-firebase"
-bug-reports:  "https://github.com/besport/ocaml-cordova-plugin-firebase/issues"
-dev-repo:     "https://github.com/besport/ocaml-cordova-plugin-firebase"
+homepage:     "git+https://github.com/besport/ocaml-cordova-plugin-firebase"
+bug-reports:  "git+https://github.com/besport/ocaml-cordova-plugin-firebase/issues"
+dev-repo:     "git+https://github.com/besport/ocaml-cordova-plugin-firebase"
 license:      "LGPL-2.1 with OCaml linking exception"
 description: "Binding to the firebase cordova plugin using gen_js_api"
 synopsis: "Binding to the firebase cordova plugin using gen_js_api"
