--- a/cordova-plugin-firebase.opam
+++ b/cordova-plugin-firebase.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-version: "2.0"
+version: "2.0.1"
 maintainer:   "Thibaut Gudin <tgudin@besport.com>"
 authors:      "Thibaut Gudin <tgudin@besport.com>"
 homepage:     "https://github.com/besport/ocaml-cordova-plugin-firebase"
@@ -13,6 +13,6 @@ depends: [
   "ocaml" { >= "4.08.0" }
   "dune" {>= "2.8"}
   "gen_js_api"
-  "js_of_ocaml" {>= "3.8.0" & < "3.9.0"}
-  "js_of_ocaml-ppx" {>= "3.8.0" & < "3.9.0"}
+  "js_of_ocaml"
+  "js_of_ocaml-ppx"
   ]
